welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:15: error: not found: value estDosmur
while(!estDosmur()){
       ^